--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,6 +22,9 @@ jobs:
           - ubuntu: 22.04
             python: 3.11
             label: 3.11
+          - ubuntu: 24.04
+            python: 3.12
+            label: 3.12
 
     # Start a local registry to which we will push trame-common, so that
     # docker buildx may access it in later steps.
